--- a/hesapMakinesi/style.css
+++ b/hesapMakinesi/style.css
@@ -13,7 +13,7 @@ h1 {
     width: 275px;
     border-radius: 10px;
     margin-left: 40%;
-    /* -top: 10%; */
+    top: -10%;
 }
 
 .ekranBorder {
